--- a/package.json
+++ b/package.json
@@ -18,6 +18,16 @@
   },
   "homepage": "https://github.com/401-heeded/pi-server#readme",
   "dependencies": {
-    "nodemon": "^1.19.2"
+    "nodemon": "^1.19.2",
+    "uuid": "^3.3.3"
+  },
+  "devDependencies": {
+    "aws-sdk": "^2.254.1",
+    "body-parser": "1.18.3",
+    "cookie-parser": "1.4.3",
+    "express": "^4.16.3",
+    "fs-extra": "6.0.1",
+    "node-uuid": "1.4.8",
+    "path": "0.12.7"
   }
 }
