--- a/.gitignore
+++ b/.gitignore
@@ -35,7 +35,6 @@ build/Release
 # Dependency directories
 node_modules/
 jspm_packages/
-images/
 
 # TypeScript v1 declaration files
 typings/
@@ -60,3 +59,6 @@ typings/
 
 # next.js build output
 .next
+
+# jpgs
+*.jpg
