--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "aws-rekognition-with-node-js",
   "version": "1.0.0",
   "description": "Simple application example, using Node Js and API Amazon Rekognition. Index new faces, delete faces and the main functionality facial recognition.",
-  "main": "auth/index.js",
+  "main": "index.js",
   "scripts": {
     "startDB": "mkdir -p ./.db && mongod --dbpath ./.db",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -32,12 +32,13 @@
     "cors": "^2.8.5",
     "dotenv": "^8.1.0",
     "jsonwebtoken": "^8.5.1",
-    "nodemon": "^1.19.2",
     "mongod": "^2.0.0",
     "mongoose": "^5.7.0",
     "morgan": "^1.9.1",
     "multer": "^1.4.2",
     "multer-s3": "^2.9.0",
+    "nodemon": "^1.19.2",
+    "requirejs": "^2.3.6",
     "superagent": "^5.1.0",
     "uuid": "^3.3.3"
   }
