--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "bcrypt": "^3.0.6",
     "cors": "^2.8.5",
     "dotenv": "^8.1.0",
+    "ejs": "^2.7.1",
     "jsonwebtoken": "^8.5.1",
     "mongod": "^2.0.0",
     "mongoose": "^5.7.0",
