--- a/package.json
+++ b/package.json
@@ -19,14 +19,6 @@
     "url": "https://github.com/401-heeded/pi-server/issues"
   },
   "homepage": "https://github.com/401-heeded/pi-server#readme",
-  "devDependencies": {
-    "aws-sdk": "^2.527.0",
-    "body-parser": "1.18.3",
-    "cookie-parser": "1.4.3",
-    "fs-extra": "6.0.1",
-    "node-uuid": "1.4.8",
-    "path": "0.12.7"
-  },
   "dependencies": {
     "bcrypt": "^3.0.6",
     "cors": "^2.8.5",
@@ -42,6 +34,12 @@
     "nodemon": "^1.19.2",
     "requirejs": "^2.3.6",
     "superagent": "^5.1.0",
-    "uuid": "^3.3.3"
+    "uuid": "^3.3.3",
+    "aws-sdk": "^2.527.0",
+    "body-parser": "1.18.3",
+    "cookie-parser": "1.4.3",
+    "fs-extra": "6.0.1",
+    "node-uuid": "1.4.8",
+    "path": "0.12.7"
   }
 }
