changed to nodemon

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "startDB": "mkdir -p ./.db && mongod --dbpath ./.db",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js"
+    "start": "nodemon index.js"
   },
   "repository": {
     "type": "git",
