--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "startDB": "mkdir -p ./.db && mongod --dbpath ./.db",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest --verbose --coverage",
     "start": "nodemon index.js"
   },
   "repository": {
@@ -29,6 +29,7 @@
     "ejs": "^2.7.1",
     "express": "^4.17.1",
     "fs-extra": "6.0.1",
+    "jest": "^24.9.0",
     "jsonwebtoken": "^8.5.1",
     "mongod": "^2.0.0",
     "mongoose": "^5.7.0",
@@ -41,5 +42,8 @@
     "requirejs": "^2.3.6",
     "superagent": "^5.1.0",
     "uuid": "^3.3.3"
+  },
+  "devDependencies": {
+    "cf-supergoose": "^1.0.2"
   }
 }
