--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "startDB": "mkdir -p ./.db && mongod --dbpath ./.db",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest --verbose --coverage",
     "start": "nodemon index.js"
   },
   "repository": {
@@ -20,26 +20,30 @@
   },
   "homepage": "https://github.com/401-heeded/pi-server#readme",
   "dependencies": {
+    "aws-sdk": "^2.527.0",
     "bcrypt": "^3.0.6",
+    "body-parser": "1.18.3",
+    "cookie-parser": "1.4.3",
     "cors": "^2.8.5",
     "dotenv": "^8.1.0",
     "ejs": "^2.7.1",
     "express": "^4.17.1",
+    "fs-extra": "6.0.1",
+    "jest": "^24.9.0",
     "jsonwebtoken": "^8.5.1",
     "mongod": "^2.0.0",
     "mongoose": "^5.7.0",
     "morgan": "^1.9.1",
     "multer": "^1.4.2",
     "multer-s3": "^2.9.0",
+    "node-uuid": "1.4.8",
     "nodemon": "^1.19.2",
+    "path": "0.12.7",
     "requirejs": "^2.3.6",
     "superagent": "^5.1.0",
-    "uuid": "^3.3.3",
-    "aws-sdk": "^2.527.0",
-    "body-parser": "1.18.3",
-    "cookie-parser": "1.4.3",
-    "fs-extra": "6.0.1",
-    "node-uuid": "1.4.8",
-    "path": "0.12.7"
+    "uuid": "^3.3.3"
+  },
+  "devDependencies": {
+    "cf-supergoose": "^1.0.2"
   }
 }
